# Task_tracker

./: .dockerignore  .gitignore  docker-compose.yaml
services/task_tracker_core/src/: main.py
task_tracker/: pyproject.toml
