[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = ["Vladislav Luchnikov <whatislov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
